--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-snap-scroll": "^0.0.5",
     "styled-components": "^5.3.0"
   },
